test/Fail/BindingsInIdiomBrackets.err
BindingsInIdiomBrackets.agda:13.5-23: error: [IdiomBracketError]
Binding syntax is not allowed in idiom brackets
when scope checking ⦇ _ ← _ then _ ⦈
